--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css"
     />
     
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Rum Tibet</title>
 </head>
 <body>
