--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/src/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
     <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -24,7 +24,7 @@
     <header id="main" class="header">
         <div class="header__inner container">
             <a href="/">
-                <img src="/src/logo.svg" alt="" width="137" height="72">
+                <img src="/image/logo.svg" alt="" width="137" height="72">
             </a>
             <button class="burger visible-tablet"><span></span></button>
             <nav class="nav">
@@ -91,8 +91,8 @@
         </div>
         <div class="program__swiper">
             <div class="program__swiper-wrapper">
-                    <img class="program__swiper-slide-1" src="./src/program-1.svg" alt="">
-                    <img class="program__swiper-slide-2" src="./src/program-2.svg" alt="">
+                    <img class="program__swiper-slide-1" src="./image/program-1.svg" alt="">
+                    <img class="program__swiper-slide-2" src="./image/program-2.svg" alt="">
             </div>
         </div>
     </section>
@@ -109,7 +109,7 @@
                 </div>
                 <ul class="about__list">
                     <li class="about__item">
-                        <img src="/src/about-1.svg" alt="">
+                        <img src="/image/about-1.svg" alt="">
                         <div class="about__main">
                             <h3 class="about__item-title">Опытный гид</h3>
                             <div class="about__item-description">
@@ -118,7 +118,7 @@
                         </div>
                     </li>
                     <li class="about__item">
-                        <img src="/src/about-2.svg" alt="">
+                        <img src="/image/about-2.svg" alt="">
                         <div class="about__main">
                             <h3 class="about__item-title">Безопасный поход</h3>
                             <div class="about__item-description">
@@ -127,7 +127,7 @@
                         </div>
                     </li>
                     <li class="about__item">
-                        <img src="/src/about-3.svg" alt="">
+                        <img src="/image/about-3.svg" alt="">
                         <div class="about__main">
                             <h3 class="about__item-title">Лояльные цены</h3>
                             <div class="about__item-description">
@@ -139,10 +139,10 @@
                 <button class="button-small">Стоимость программ</button>
             </div>
             <div class="about__inner">
-                <img src="/src/about-card-1.svg" alt="">
-                <img src="/src/about-card-2.svg" alt="">
-                <img src="/src/about-card-3.svg" alt="">
-                <img src="/src/about-card-4.svg" alt="">
+                <img src="/image/about-card-1.svg" alt="">
+                <img src="/image/about-card-2.svg" alt="">
+                <img src="/image/about-card-3.svg" alt="">
+                <img src="/image/about-card-4.svg" alt="">
             </div>
         </div>
     </section>
@@ -155,7 +155,7 @@
         <div class="price__cards card f-carousel" id="myCarousel2">
             <div class="card__item card__item--bg-1 f-carousel__slide">
                 <div class="card__raiting">
-                    <img src="/src/raiting.svg" alt="">
+                    <img src="/image/raiting.svg" alt="">
                     <p>4.9</p>
                 </div>
                 <div class="card__inner">
@@ -170,7 +170,7 @@
             </div>
             <div class="card__item card__item--bg-2 f-carousel__slide">
                 <div class="card__raiting">
-                    <img src="/src/raiting.svg" alt="">
+                    <img src="/image/raiting.svg" alt="">
                     <p>4.9</p>
                 </div>
                 <div class="card__inner">
@@ -185,7 +185,7 @@
             </div>
             <div class="card__item card__item--bg-3 f-carousel__slide">
                 <div class="card__raiting">
-                    <img src="/src/raiting.svg" alt="">
+                    <img src="/image/raiting.svg" alt="">
                     <p>4.9</p>
                 </div>
                 <div class="card__inner">
@@ -208,7 +208,7 @@
         </div>
         <div class="blog__inner container">
             <div class="blog-card">
-                <img src="/src/blog-card-1.svg" alt="">
+                <img src="/image/blog-card-1.svg" alt="">
                 <div class="blog-card__right">
                     <h3 class="blog-card__title">Красивая Италя, какая она в реальности?</h3>
                     <div class="blog-card__text">
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="blog-card">
-                <img src="/src/blog-card-2.svg" alt="">
+                <img src="/image/blog-card-2.svg" alt="">
                 <div class="blog-card__right">
                     <h3 class="blog-card__title">Красивая Италя, какая она в реальности?</h3>
                     <div class="blog-card__text">
@@ -234,7 +234,7 @@
                 </div>
             </div>
             <div class="blog-card">
-                <img src="/src/blog-card-3.svg" alt="">
+                <img src="/image/blog-card-3.svg" alt="">
                 <div class="blog-card__right">
                     <h3 class="blog-card__title">Красивая Италя, какая она в реальности?</h3>
                     <div class="blog-card__text">
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="blog-card">
-                <img src="/src/blog-card-4.svg" alt="">
+                <img src="/image/blog-card-4.svg" alt="">
                 <div class="blog-card__right">
                     <h3 class="blog-card__title">Красивая Италя, какая она в реальности?</h3>
                     <div class="blog-card__text">
@@ -269,23 +269,23 @@
             <h1 class="section__title">Делимся впечатлениями</h1>
         </div>
         <div class="photo__inner f-carousel" id="myCarousel">
-            <a class="f-carousel__slide photo__item" href="/src/gallery-1.svg" data-fancybox="gallery" data-caption="Caption #1">
-                <img class="photo__image" src="/src/gallery-1.svg">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-1.svg" data-fancybox="gallery" data-caption="Caption #1">
+                <img class="photo__image" src="/image/gallery-1.svg">
             </a>
-            <a class="f-carousel__slide photo__item" href="/src/gallery-2.svg" data-fancybox="gallery" data-caption="Caption #2">
-                <img class="photo__image" src="/src/gallery-2.svg" alt="img">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-2.svg" data-fancybox="gallery" data-caption="Caption #2">
+                <img class="photo__image" src="/image/gallery-2.svg" alt="img">
             </a>
-            <a class="f-carousel__slide photo__item" href="/src/gallery-3.svg" data-fancybox="gallery" data-caption="Caption #3">
-                <img class="photo__image" src="/src/gallery-3.svg" alt="img">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-3.svg" data-fancybox="gallery" data-caption="Caption #3">
+                <img class="photo__image" src="/image/gallery-3.svg" alt="img">
             </a>
-            <a class="f-carousel__slide photo__item" href="/src/gallery-5.svg" data-fancybox="gallery" data-caption="Caption #4">
-                <img class="photo__image" src="/src/gallery-5.svg" alt="img">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-5.svg" data-fancybox="gallery" data-caption="Caption #4">
+                <img class="photo__image" src="/image/gallery-5.svg" alt="img">
             </a>
-            <a class="f-carousel__slide photo__item" href="/src/gallery-4.svg" data-fancybox="gallery" data-caption="Caption #5">
-                <img class="photo__image" src="/src/gallery-4.svg" alt="img">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-4.svg" data-fancybox="gallery" data-caption="Caption #5">
+                <img class="photo__image" src="/image/gallery-4.svg" alt="img">
             </a>
-            <a class="f-carousel__slide photo__item" href="/src/gallery-6.svg" data-fancybox="gallery" data-caption="Caption #6">
-                <img class="photo__image" src="/src/gallery-6.svg" alt="img">
+            <a class="f-carousel__slide photo__item" href="/image/gallery-6.svg" data-fancybox="gallery" data-caption="Caption #6">
+                <img class="photo__image" src="/image/gallery-6.svg" alt="img">
             </a>
         </div>
         <button class="button-small">Наш pinterest</button>
@@ -322,10 +322,10 @@
                     <a href="tel:71234567890" class="footer__contacts-phone">+7 (123) 456-78-90</a>
                 </div>
                 <div class="footer__socials">
-                    <img src="/src/entypo-social_vk-with-circle.svg" alt="">
-                    <a href="tg://resolve?domain="><img src="/src/ic_baseline-telegram.svg" alt=""></a>
-                    <img src="/src/mdi_skype.svg" alt="">
-                    <img src="/src/mdi_pinterest.svg" alt="">
+                    <img src="/image/entypo-social_vk-with-circle.svg" alt="">
+                    <a href="tg://resolve?domain="><img src="/image/ic_baseline-telegram.svg" alt=""></a>
+                    <img src="/image/mdi_skype.svg" alt="">
+                    <img src="/image/mdi_pinterest.svg" alt="">
                 </div>
             </div>
             <div class="footer__services">
@@ -358,7 +358,7 @@
     </footer>
 
     <a href="#main" class="scroll-top">
-        <img src="/src/scroll-top.svg" alt="" width="50" height="50">
+        <img src="/image/scroll-top.svg" alt="" width="50" height="50">
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
